--- a/package.json
+++ b/package.json
@@ -11,25 +11,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^4.0.0",
-    "express": "^4.15.2",
-    "request": "^2.81.0",
     "bcrypt-nodejs": "latest",
     "body-parser": "~1.0.0",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.0.0",
+    "dotenv": "^4.0.0",
     "ejs": "~0.8.5",
+    "express": "^4.15.2",
     "express-ejs-layouts": "^1.1.0",
     "express-session": "~1.0.0",
     "hbs": "^4.0.0",
     "method-override": "~1.0.0",
-    "mongoose": "^4.7.2",
+    "mongoose": "^4.9.5",
     "morgan": "~1.0.0",
     "passport": "~0.1.17",
     "passport-facebook": "~1.0.2",
     "passport-google-oauth": "~0.1.5",
     "passport-local": "~0.1.6",
-    "passport-twitter": "~1.0.2"
+    "passport-twitter": "~1.0.2",
+    "request": "^2.81.0"
   },
   "devDependencies": {},
   "repository": {
